--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -15,8 +15,8 @@
     display: inline-block;
     font-size: 48px;
     color: #d9dcd6;
+    
 }
-
 .header div {
     padding-top: 15px;
     margin-right: 20px;
@@ -181,9 +181,14 @@ p {
     font-size: 36px;
 }
 
-.footer, footer h2 {
+.footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+}
+
+.footer h2 {
+    font-size: 20px;
     text-align: center;
 }
